delete/edit locations, improve behavior on add/delete/edit

--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -18,6 +18,10 @@ body
   font-weight bold
   border-bottom 1px solid black
 
+#foodGroups select
+  width 100%
+  overflow-y auto
+  
 #map
   margin-left 50px
   width 680px
