--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -14,6 +14,10 @@
   font-weight: bold;
   border-bottom: 1px solid #000;
 }
+#foodGroups select {
+  width: 100%;
+  overflow-y: auto;
+}
 #map {
   margin-left: 50px;
   width: 680px;
