--- a/views/index.jade
+++ b/views/index.jade
@@ -4,22 +4,26 @@ block content
 
   include navbar.jade
   .container
-    .row
-      if session.username
-        h1 Welcome, #{session.username}!
-      else
-        h1 Welcome to WhatsGood
+    //- .row
+      //- if session.username
+      //-   h1 Welcome, #{session.username}!
+      //- else
+      //-   h1 Welcome to WhatsGood
     div#foodGroups(class="row")
       each title, key in cats
-        div(class="col-xs-2")
+        div(class="col-xs-3")
           p(class="text-center table-head") #{title}
-          ul(id="#{key}-list", class="list-unstyled place-list")
+          select(id="#{key}-list", size="4", class="place-list")
     .row
       div#neighborhoods
         ul(id="neighborhoodList", class="list-unstyled")
       
       div#map
       br
+      
+      div#search
+        button(class="btn btn-default",onclick="queryLocations(2)") My Locations
+        button(class="btn btn-default",onclick="queryLocations(1)") Search in View
     
     //- div#recentLocations(class="row")
     //-   h3 Recently Added
@@ -57,7 +61,7 @@ block content
                     each title,key in cats
                       option(value="#{key}") #{title}
                 div(class="form-group")
-                  textarea(id="placeDescription",type="text", placeholder="Any helpful tips/comments?")
+                  textarea(id="placeDescription",type="text", name="description", placeholder="Any helpful tips/comments?")
                 div
                   input(id="submitNewPlace", class="btn btn-default" type="submit", value="Submit!")  
             
@@ -79,7 +83,7 @@ block content
     
     div#profileModal(class="modal fade", tabindex="-1", role="dialog", aria-hidden="true")
       .modal-dialog
-        .modal-content
+        .modal-content(id="profileContent")
           .modal-header
             button(type="button" class="close", data-dismiss="modal", aria-hidden="true") &times;
             h4(class="modal-title") Profile
@@ -131,9 +135,12 @@ block content
 block scripts
   script.
     var recentLocations = !{JSON.stringify(locations)};
-    
-  script.
     var cats = !{JSON.stringify(cats)};
+    var profile = null;
+  
+  if profile
+    script.
+      var profile = !{JSON.stringify(profile)};
   script(src='/javascripts/main.js')
   script(async, defer, src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAYOMRlzJ32KKjQbFrfwCq9SR9AnBmlVKI&callback=initMap')
   
