--- a/source/stylesheets/index.styl
+++ b/source/stylesheets/index.styl
@@ -12,6 +12,9 @@ body
 .nav img
   padding-top 8px
 
+#foodGroups
+  margin-bottom 10px
+
 #foodGroups .table-head
   height 30px
   font-size 14px
@@ -21,7 +24,7 @@ body
 #foodGroups select
   width 100%
   overflow-y auto
-  
+
 #map
   margin-left 50px
   width 680px
@@ -53,6 +56,10 @@ body
 #recentLocations li
   float left
   list-style none
+
+#search button
+  margin-left 5px
+  margin-bottom 10px
 
 form label
   width 120px
