--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -74,6 +74,12 @@ form input[type="submit"] {
   width: 120px;
   height: 36px;
 }
+.editbar {
+  text-align: right;
+}
+.editbar a {
+  margin-right: 15px;
+}
 p.error {
   padding: 8px 16px;
   background-color: #ffa0a0;
