--- a/views/index.jade
+++ b/views/index.jade
@@ -4,144 +4,39 @@ block content
 
   include navbar.jade
   .container
-    //- .row
-      //- if session.username
-      //-   h1 Welcome, #{session.username}!
-      //- else
-      //-   h1 Welcome to WhatsGood
-    div#foodGroups(class="row")
-      each title, key in cats
-        div(class="col-xs-3")
+    #foodGroups.row
+      each title, key in categories
+        .col-xs-3
           p(class="text-center table-head") #{title}
           select(id="#{key}-list", size="4", class="place-list")
     .row
-      div#neighborhoods
+      #neighborhoods
         ul(id="neighborhoodList", class="list-unstyled")
-      
-      div#map
+
+      #map
       br
-      
-      div#search
+
+      #search
         button(class="btn btn-default",onclick="queryLocations(2)") My Locations
         button(class="btn btn-default",onclick="queryLocations(1)") Search in View
-    
-    //- div#recentLocations(class="row")
-    //-   h3 Recently Added
-    //-   div(class="col-xs-12")
-    //-     ul
-    //-     each location, index in locations
-    //-       li(class="col-xs-3") 
-    //-         a(href="#" onClick="gotoPoint(#{index})") #{location.name}
-    
 
-      
-    if profile  
-      div#formContainer(class="modal fade", tabindex="-1", role="dialog", aria-hidden="true")
-        div(class="modal-dialog")
-          div(class="modal-content")
-            div(class="modal-header")
-              button(type="button", class="close", data-dismiss="modal", aria-hidden="true") &times;
-              h4(class="modal-title") Add New Location
-            div(class="modal-body")
-              form(id="locationForm", class="popupContainer", role="form", action="/addlocation", method="post")
-                div#mapImg
-                div(class="form-group")
-                  label Name of Place
-                  input(id="placeName", type="text", name="location-name", placeholder="Location Name")
-                div(class="form-group")
-                  label Found By 
-                  input(id="finderName", type="text", name="location-name", value="#{session.username}", hidden)
-                  span #{session.username}
-                div(class="form-group")
-                  label Price Range 
-                  input(id="priceRange", type="text", name="price-range", placeholder="How much did your meal cost?")
-                div(class="form-group")
-                  label Food Category 
-                  select(id="foodCategory", type="select", name="category")
-                    each title,key in cats
-                      option(value="#{key}") #{title}
-                div(class="form-group")
-                  textarea(id="placeDescription",type="text", name="description", placeholder="Any helpful tips/comments?")
-                div
-                  input(id="submitNewPlace", class="btn btn-default" type="submit", value="Submit!")  
-            
-      button(id="formOpenButton", class="btn btn-info", data-toggle="modal", data-target="#formContainer", style="display:none;") Open Form
-    
-    div#aboutModal(class="modal fade", tabindex="-1", role="dialog", aria-hidden="true")
-      div(class="modal-dialog")
-        div(class="modal-content")
-          div(class="modal-header")
-            button(type="button", class="close", data-dismiss="modal", aria-hidden="true") &times;
-            h4(class="modal-title") About
-          div(class="modal-body")
-            p.
-              We all know there is tons of delicious food available in Mexico City. The problem is, most of the places selling this food are too small or too temporary to appear on google maps.
-            p.
-              This site tries to solve that problem as simply as possible, but getting users like you to record where you have eaten. Hopefully, together we can figure out what's good around here.
-          //- div(class="modal-footer")
-          //-   button(type="button", class="btn btn-default", data-dismiss="modal") Close
-    
-    div#profileModal(class="modal fade", tabindex="-1", role="dialog", aria-hidden="true")
-      .modal-dialog
-        .modal-content(id="profileContent")
-          .modal-header
-            button(type="button" class="close", data-dismiss="modal", aria-hidden="true") &times;
-            h4(class="modal-title") Profile
-          .modal-body
-            p. 
-              Give yourself a nickname
-            form(id="profileForm", role="form", action="/users/edit", method="post")
-              .form-group
-                input(type="text", name="username", placeholder="#{session.username}", autofocus)
-              div
-                input(id="profileButton", class="btn btn-default", type="submit", value="Edit Profile")
-            
-          
-    div#signupModal(class="modal fade", tabindex="-1", role="dialog", aria-hidden="true")
-      div(class="modal-dialog")
-        div(class="modal-content")
-          div(class="modal-header")
-            button(type="button", class="close", data-dismiss="modal", aria-hidden="true") &times;
-            h4(class="modal-title") Sign Up
-          div(class="modal-body")
-            form(id="signupForm", role="form", action="/users/signup", method="post")
-              div(class="form-group")
-                input(type="text", name="username", placeholder="Username", autofocus)
-              div(class="form-group")
-                input(type="text", name="email", placeholder="Email")
-              div(class="form-group")
-                input(type="password", name="password", placeholder="Password")
-              div(class="form-group")
-                input(type="password", name="confirm" placeholder="Confirm Password")
-              div
-                input(id="signupButton", class="btn btn-default" type="submit", value="Sign Up")
+    if profile
+      include modals/form.jade
 
-    div#loginModal(class="modal fade", tabindex="-1", role="dialog", aria-hidden="true")
-      div(class="modal-dialog")
-        div(class="modal-content")
-          div(class="modal-header")
-            button(type="button", class="close", data-dismiss="modal", aria-hidden="true") &times;
-            h4(class="modal-title") Log In
-          div(class="modal-body")
-            form(id="loginForm", role="form", action="/users/login", method="post")
-              div(class="form-group")
-                input(type="text", name="username", placeholder="Username")
-              div(class="form-group")
-                input(type="password", name="password", placeholder="Password")
-              div
-                input(id="signupButton", class="btn btn-default" type="submit", value="Log in")   
+    include modals/about.jade
+    include modals/profile.jade
+    include modals/signup.jade
+    include modals/login.jade
 
 
 block scripts
   script.
     var recentLocations = !{JSON.stringify(locations)};
-    var cats = !{JSON.stringify(cats)};
+    var categories = !{JSON.stringify(categories)};
     var profile = null;
-  
+
   if profile
     script.
       var profile = !{JSON.stringify(profile)};
   script(src='/javascripts/main.js')
   script(async, defer, src='https://maps.googleapis.com/maps/api/js?key=AIzaSyAYOMRlzJ32KKjQbFrfwCq9SR9AnBmlVKI&callback=initMap')
-  
-  //- script(src='https://maps.google.com/maps/api/js?sensor=false&libraries=geometry&v=3.22&key=AIzaSyAYOMRlzJ32KKjQbFrfwCq9SR9AnBmlVKI')
